--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/dlorenc-vmtest2/skaffold:latest'
-  args: ['gcloud', 'container', 'clusters', 'get-credentials', 'skaffold-demo', '--zone=us-central1-a']
+  args: ['gcloud', 'container', 'clusters', 'get-credentials', 'pipeline-prod', '--zone=us-central1-f']
   env:
   - 'KUBECONFIG=/workspace/.kubeconfig'
 - name: 'gcr.io/dlorenc-vmtest2/skaffold:latest'
