--- a/tekton/merge.yaml
+++ b/tekton/merge.yaml
@@ -7,11 +7,8 @@ spec:
     resources:
     - name: repo
       type: git
-    params:
-    - name: forkRepo
-      type: string
-    - name: forkBranch
-      type: string
+    - name: pr
+      type: pullRequest
   steps:
   - name: merge
     image: gcr.io/cloud-builders/git
@@ -20,11 +17,29 @@ spec:
     - -c
     - |
         set -ex
+        if [ ! -f /workspace/pr/labels/lgtm ]; then
+          "No lgtm label detected. Not merging."
+          exit 0
+        fi
+
+        repo=$(python -c "import json; print json.load(open('/workspace/pr/head.json', 'r'))['Repo']")
+        baserepo=$(python -c "import json; print json.load(open('/workspace/pr/base.json', 'r'))['Repo']")
+        branch=$(python -c "import json; print json.load(open('/workspace/pr/head.json', 'r'))['Branch']")
+
         git config --global user.email "tekton@tekton.dev"
         git config --global user.name "Tekton Bot"
         cd /workspace/repo
-        git checkout -b pr master
-        git pull $(inputs.params.forkRepo) $(inputs.params.forkBranch)
-        git checkout master
-        git merge --no-ff pr
+
+        if [ "${baserepo}" == "${repo}" ]; then
+          git fetch
+          git checkout -b $branch origin/$branch
+          git merge master
+          git checkout master
+          git merge --no-ff $branch
+        else
+          git checkout -b pr master
+          git pull $repo $branch
+          git checkout master
+          git merge --no-ff pr
+        fi
         git push origin master
