--- a/tekton/deploy.yaml
+++ b/tekton/deploy.yaml
@@ -1,22 +1,49 @@
 apiVersion: tekton.dev/v1alpha1
 kind: Task
 metadata:
-  name: run-tests
+  name: deploy
 spec:
   inputs:
     resources:
     - name: repo
       type: git
-    - name: cluster
-      type: cluster
+    params:
+    - name: branch
+  outputs:
+    resources:
+    - name: image
+      type: image
   steps:
   - name: deploy
-    image: gcr.io/dlorenc-vmtest2/skaffold:latest
-    command: ['skaffold']
+    image: gcr.io/k8s-skaffold/skaffold:latest
+    command: ['sh']
     args:
-    - run
-    - -f
-    - /workspace/repo/skaffold.yaml
-    env:
-    - name: KUBECONFIG
-      value: $(inputs.resources.cluster.name)/kubeconfig
+    - -c
+    - |
+      set -ex
+      env
+      gcloud auth configure-docker -q
+      gcloud info
+      if [ $(inputs.params.branch) != "refs/heads/master" ]; then
+        exit 0
+      fi
+      cd /workspace/repo
+      skaffold run -f skaffold.yaml
+    volumeMounts:
+    - mountPath: /var/run/
+      name: dind-socket
+  sidecars:
+  - image: docker:18.05-dind
+    name: server
+    securityContext:
+      privileged: true
+    volumeMounts:
+    - mountPath: /var/lib/docker
+      name: dind-storage
+    - mountPath: /var/run/
+      name: dind-socket
+  volumes:
+  - name: dind-storage
+    emptyDir: {}
+  - name: dind-socket
+    emptyDir: {}
